--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: dbtools
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
+Title: Uses R wrapper function to send queries to athena.
+Version: 0.0.2
+Author: Karik Isichei
 Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: See title.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
