--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Imports:
-  reticulate (>= 1.10)
+  reticulate (>= 1.10),
   s3tools
 Remotes: 
   moj-analytical-services/s3tools
