--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ LazyData: true
 RoxygenNote: 6.0.1
 Imports:
   reticulate (>= 1.10),
-  s3tools
+  s3tools,
+  readr,
+  data.table (>= 1.11.8)
 Remotes:
   moj-analytical-services/s3tools
