--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,16 +5,14 @@ Version: 2.0.3
 Author: Karik Isichei
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: See title.
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 7.1.1
 Imports:
-  reticulate (>= 1.10),
-  s3tools,
-  readr
+    magrittr,
+    reticulate
 Suggests:
   data.table (>= 1.11.8)
 Remotes:
   moj-analytical-services/s3tools
-
