--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: dbtools
 Type: Package
 Title: Uses R wrapper function to send queries to athena.
-Version: 2.0.3
+Version: 3.0.0
 Author: Karik Isichei
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: See title.
@@ -13,6 +13,9 @@ Imports:
     magrittr,
     reticulate
 Suggests:
-  data.table (>= 1.11.8)
+    knitr,
+    data.table (>= 1.11.8),
+    rmarkdown
 Remotes:
   moj-analytical-services/s3tools
+VignetteBuilder: knitr
