--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ LazyData: true
 RoxygenNote: 7.1.1
 Imports:
     magrittr,
-    reticulate
+    reticulate,
+    arrow
 Suggests:
     knitr,
     data.table (>= 1.11.8),
